--- a/public/index.html
+++ b/public/index.html
@@ -28,7 +28,7 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Work+Sans:ital,wght@0,100..900;1,100..900&display=swap"
       rel="stylesheet">
-    <title>Monse</title>
+    <title>Mia</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
